--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -23,8 +23,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Configure CMake
-        run: cmake -DCMAKE_BUILD_TYPE=Release -S . -B build
+        run: cmake -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_BUILD_TYPE=Debug -S . -B build
 
       - name: Build
         working-directory: ${{github.workspace}}/build
-        run: cmake --build . --config Release
+        run: cmake --build . --parallel
