add notify alive callback

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ include(cmake/ProjectOptions.cmake)
 
 project(
     console
-    VERSION 0.0.1
+    VERSION 0.0.2
     DESCRIPTION "Library for interacting with the console."
 )
 
@@ -12,6 +12,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 if(NOT DEFINED CMAKE_CXX_STANDARD)
     set(CMAKE_CXX_STANDARD 20)
+    set(BUILD_EXAMPLES ON)
 endif()
 
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -20,6 +21,9 @@ set_project_options("include" "")
 
 add_subdirectory(src)
 
-if(DEFINED CONSOLE_BUILD_EXAMPLES)
+if(${BUILD_EXAMPLES})
+    message(STATUS "${PROJECT_NAME}: building examples")
     add_subdirectory(examples)
+else()
+    message(STATUS "${PROJECT_NAME}: not building examples")
 endif()
