--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -12,7 +12,7 @@ on:
     branches: [ "main" ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     # runs-on: ${{ matrix.os }}
     # strategy:
     #   fail-fast: false
